--- a/app/src/main/res/layout/item_popular_tv_show.xml
+++ b/app/src/main/res/layout/item_popular_tv_show.xml
@@ -1,37 +1,63 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:card_view="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/rootLayout"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:paddingStart="15dp"
     android:paddingTop="10dp"
-    android:paddingEnd="15dp"
     android:paddingBottom="10dp">
 
-    <ImageView
-        android:id="@+id/tvShowImage"
-        android:layout_width="60dp"
-        android:layout_height="60dp"
-        android:layout_marginEnd="16dp"
-        tools:src="@tools:sample/avatars" />
+    <androidx.cardview.widget.CardView
+        android:id="@+id/tvShowCardViewImage"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="20dp"
+        card_view:cardCornerRadius="5dp"
+        card_view:cardPreventCornerOverlap="false"
+        card_view:cardUseCompatPadding="true">
+
+        <ImageView
+            android:id="@+id/tvShowImage"
+            android:layout_width="wrap_content"
+            android:layout_height="150dp"
+            android:adjustViewBounds="true"
+            android:minWidth="100dp"
+            tools:src="@tools:sample/avatars" />
+
+    </androidx.cardview.widget.CardView>
 
     <TextView
         android:id="@+id/tvShowName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignTop="@+id/tvShowImage"
+        android:layout_alignTop="@+id/tvShowCardViewImage"
         android:layout_marginEnd="10dp"
-        android:layout_toEndOf="@+id/tvShowImage"
-        android:textSize="14sp"
+        android:layout_toEndOf="@+id/tvShowCardViewImage"
+        android:textSize="20sp"
         android:textStyle="bold" />
+
+    <ImageView
+        android:id="@+id/tvShowVoteIcon"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:layout_below="@+id/tvShowName"
+        android:layout_alignStart="@+id/tvShowName"
+        android:layout_marginTop="10dp"
+        app:srcCompat="@drawable/star" />
 
     <TextView
         android:id="@+id/tvShowsRate"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/tvShowName"
-        android:layout_alignStart="@+id/tvShowName"
-        android:textSize="12sp" />
+        android:layout_height="match_parent"
+        android:layout_alignTop="@+id/tvShowVoteIcon"
+        android:layout_alignBottom="@+id/tvShowVoteIcon"
+        android:layout_marginStart="10dp"
+        android:layout_toEndOf="@+id/tvShowVoteIcon"
+        android:gravity="center"
+        android:textSize="20sp" />
 
 </RelativeLayout>
+
+
